必要なファイルを移動

--- a/src/main/resources/env.properties
+++ b/src/main/resources/env.properties
@@ -20,7 +20,7 @@ nablarch.db.schema=PUBLIC
 nablarch.db.maxPoolSize=10
 
 # フォーマット定義ファイルの格納ディレクトリ
-nablarch.filePathSetting.basePathSettings.format=file:./src/main/format
+nablarch.filePathSetting.basePathSettings.format=file:./work/format
 
 # 出力ファイルの出力先ディレクトリ
 nablarch.filePathSetting.basePathSettings.output=file:./work/output
